# sophy3

./: .gitignore  README.md  TradingProjectAnalysis.md  TradingProjectAnalyzer.py  break_out.ipynb  compare_data_sources.py  long_only_ftmo_tester.py  mt5_connection_test.py  mt5_multi_asset_comparisson.py  prepare_csv.py  pyproject.toml  rename_collums.py  requirements.txt  run_trader.py  test.py  trader_tom.py
config/: config.json  config.py  test_symbols.json
data/: cache.py  downloader.py  sources.py
risk/: manager.py
scripts/: backtest.py  batch_backtesting.py  live_trade.py  staged_testing.py
src/: live_trade.py  risk.py
src/backtesting/: backtest.py  vectorbt_grid_search_example.ipynb
src/data/: cache.py  sources.py
src/strategies/: ema_strategy.py  params.py
src/utils/: time_utils.py  time_utis.py
src/workflows/: batch_backtesting.py  get_symbol_details.py  optimize_strategy.py  staged_testing.py
strategies/: multi_layer_ema.py
utils/: __init__.py  broker.py
